Make sure lists of content in sub-categories are full width on smaller screens

--- a/app/assets/stylesheets/browse-categories.css.scss
+++ b/app/assets/stylesheets/browse-categories.css.scss
@@ -123,6 +123,10 @@
         padding: 1em 0 0 0;
         width: 65.5%;
 
+        @include media(mobile) {
+          width: auto;
+        }
+
         li {
 
           h2 {
